// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typography > rtl render > component should be rendered correctly in RTL direction 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-typography ant-typography-rtl css-var-root"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`typography > rtl render > component should be rendered correctly in RTL direction 2`] = `
<div
  data-v-app=""
>
  <article
    class="ant-typography ant-typography-rtl css-var-root"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </article>
</div>
`;

exports[`typography > rtl render > component should be rendered correctly in RTL direction 3`] = `
<div
  data-v-app=""
>
  <h1
    class="ant-typography ant-typography-rtl css-var-root"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h1>
</div>
`;

exports[`typography > rtl render > component should be rendered correctly in RTL direction 4`] = `
<div
  data-v-app=""
>
  <a
    class="ant-typography ant-typography-rtl ant-typography-link css-var-root"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </a>
</div>
`;
